// 声明 proto 语法版本，固定值
syntax = "proto3";

// proto 包名
package configrpc;

// 生成 golang 代码后的包名
option go_package = "./configrpc";

message EmptyReq {
}

message EmptyResp {
}

message IdReq {
  int64 id = 1;
}
message IdsReq {
  repeated int64 ids = 1;
}

/************** blog 网站管理 **************/

message SaveConfigReq {
  string config_key = 1;
  string config_value = 2;
}

message FindConfigReq {
  string config_key = 1;
}

message FindConfigResp {
  string config_value = 1;
}

service ConfigRpc {

  // 保存配置
  rpc SaveConfig(SaveConfigReq) returns(EmptyResp);
  // 查询配置
  rpc FindConfig(FindConfigReq) returns(FindConfigResp);
}
